--- a/javascript/js_hanabi/practice.html
+++ b/javascript/js_hanabi/practice.html
@@ -32,6 +32,13 @@
             position: absolute;
             z-index: 3;
         }
+
+        #btn_hanabi{
+            position: absolute;
+            z-index: 10;
+            left: 20px;
+            top: 20px;
+        }
     </style>
 </head>
 
