--- a/javascript/js_scrollify/index.html
+++ b/javascript/js_scrollify/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>これはテスト</title>
+  <title>scrollifyライブラリを使用してセクションごとにスクロールするサンプル</title>
   <meta charset="utf-8">
   <meta name="description" content="">
   <meta name="author" content="">
